<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">AutoTransport</string>  <!--Parse Starter Project-->

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_signed_up_log_in">Already signed up? Log in!</string>
    <string name="de_unde_vrei_sa_pleci">De unde vrei sa pleci?</string>
    <string name="unde_vrei_sa_ajungi">Unde vrei sa ajungi?</string>
    <string name="numar_de_bilete">Numar de bilete</string>
    <string name="cauta">Cauta</string>
    <string name="textview">TextView</string>
    <string name="data_plecarii">Data plecarii</string>
    <string name="buna_ioana">Buna, Ioana!</string>
    <string name="todo">TODO</string>
    <string name="sortati">Sortati</string>
    <string name="filtre">Filtre</string>
    <string name="miercuri_13_februarie_2019">Miercuri, 13 februarie 2019</string>
    <string name="constanta_bucuresti">Constanta - Bucuresti</string>
    <string name="alttranport">AltTranport</string>
    <string name="_100_lei">100 lei</string>
    <string name="_8_00_11_00">8:00 - 11:00</string>
    <string name="maxim_9_bilete">(maxim 9 bilete)</string>

    <string-array name="cardTypes">
        <item>Visa</item>
        <item>Mastercard</item>
        <item>Maestro</item>
    </string-array>

    <string-array name="months">
        <item>Ianuarie</item>
        <item>Februarie</item>
        <item>Martie</item>
        <item>Aprilie</item>
        <item>Mai</item>
        <item>Iunie</item>
        <item>Iulie</item>
        <item>August</item>
        <item>Septembrie</item>
        <item>Octombrie</item>
        <item>Noiembrie</item>
        <item>Decembrie</item>
    </string-array>

    <string-array name="years">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
    </string-array>
    
    <string-array name="facilities_item">
        <item>aer conditionat</item>
        <item>Wi-Fi</item>
        <item>prize</item>
        <item>masuta</item>
        <item>spatiu pentru picioare</item>
        <item>spatiu pentru bagaje</item>
        <item>toaleta</item>
    </string-array>
    
    <string name="title_activity_options">AutoTransport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="limba">Limba</string>
    <string name="romana">Romana</string>
    <string name="engleza">Engleza</string>
    <string name="ajutor">Ajutor</string>
</resources>
