<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/alttransport"
        android:contentDescription="@string/todo"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resultImageView"
        android:layout_marginStart="130dp"
        android:text="@string/constanta_bucuresti"
        android:textSize="18sp"
        android:layout_marginLeft="130dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/hourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locationTextView"
        android:layout_centerVertical="true"
        android:layout_alignTop="@+id/locationTextView"
        android:layout_marginTop="30dp"
        android:text="@string/_8_00_11_00"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/locationTextView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/companyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resultImageView"
        android:layout_alignTop="@+id/resultImageView"
        android:layout_marginTop="90dp"
        android:text="@string/alttranport"
        android:layout_alignLeft="@+id/resultImageView"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/companyTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:text="@string/_100_lei"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:textColor="#000000" />

</RelativeLayout>
