<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dateTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Data cursei: 18/07/2019"
        android:textColor="#000000"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/resultImageViewB"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/alttransport"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/locationTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resultImageViewB"
        android:layout_marginStart="130dp"
        android:text="@string/constanta_bucuresti"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginLeft="130dp" />

    <TextView
        android:id="@+id/hourTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locationTextViewB"
        android:layout_centerVertical="true"
        android:layout_alignTop="@+id/locationTextViewB"
        android:layout_marginTop="30dp"
        android:text="@string/_8_00_11_00"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_alignLeft="@+id/locationTextViewB" />

    <TextView
        android:id="@+id/companyTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resultImageViewB"
        android:layout_alignTop="@+id/resultImageViewB"
        android:layout_marginTop="90dp"
        android:text="@string/alttranport"
        android:textColor="#000000"
        android:layout_alignLeft="@+id/resultImageViewB" />

    <TextView
        android:id="@+id/priceTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pret: 100 lei"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"/>

    <TextView
        android:id="@+id/seriesTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Serie bilet: 44342354"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/issueDateTextViewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data emiterii: 15/05/2019"
        android:layout_marginTop="230dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"/>


</RelativeLayout>
