<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".OptionsCompleteActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/helloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:text="@string/buna_ioana"
            android:textColor="#000000"
            android:textSize="26dp" />

        <AutoCompleteTextView
            android:id="@+id/departureTextView"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:autofillHints=""
            android:completionThreshold="1"
            android:ems="10"
            android:hint="De unde vrei sa pleci?"
            android:inputType="text" />

        <AutoCompleteTextView
            android:id="@+id/arrivalTextView"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp"
            android:autofillHints=""
            android:completionThreshold="1"
            android:ems="10"
            android:hint="Unde vrei sa ajungi?"
            android:inputType="text" />

        <TextView
            android:id="@+id/dateTextView"
            style="@android:style/Widget.EditText"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="360dp"
            android:focusableInTouchMode="false"
            android:hint="@string/data_plecarii"
            android:text="" />

        <EditText
            android:id="@+id/numberOfTicketsEditText"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="360dp"
            android:autofillHints=""
            android:digits="123456789"
            android:ems="10"
            android:hint="@string/numar_de_bilete"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/maxTicketsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="410dp"
            android:text="@string/maxim_9_bilete"
            android:textSize="16sp" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:onClick="searchResults"
            android:text="@string/cauta"
            android:textSize="18dp"
            android:background="@drawable/button_background_small"/>


    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu = "@menu/drawer_menu"  />


</android.support.v4.widget.DrawerLayout>
